src/generated/KipuParser.py
# Generated from grammar/Kipu.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class KipuParser ( Parser ):

    grammarFileName = "Kipu.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'var'", "'const'", "'entero'", "'decimal'", 
                     "'porcentaje'", "'booleano'", "'texto'", "'monto'", 
                     "<INVALID>", "'si'", "'sino'", "'mientras'", "'para'", 
                     "'desde'", "'hasta'", "'paso'", "'regla'", "'retornar'", 
                     "'mostrar'", "'leer'", "'convertir'", "'y'", "'o'", 
                     "'no'", "'verdadero'", "'falso'", "'mod'", "'+='", 
                     "'-='", "'=='", "'!='", "'<='", "'>='", "'<'", "'>'", 
                     "'='", "'+'", "'-'", "'*'", "'/'", "'('", "')'", "'{'", 
                     "'}'", "';'", "','", "':'" ]

    symbolicNames = [ "<INVALID>", "VAR", "CONST", "ENTERO", "DECIMAL", 
                      "PORCENTAJE", "BOOLEANO", "TEXTO", "MONTO", "MONEDA", 
                      "SI", "SINO", "MIENTRAS", "PARA", "DESDE", "HASTA", 
                      "PASO", "REGLA", "RETORNAR", "MOSTRAR", "LEER", "CONVERTIR", 
                      "Y", "O", "NO", "VERDADERO", "FALSO", "MOD", "MAS_ASIG", 
                      "MENOS_ASIG", "IGUAL", "DIFERENTE", "MENOR_IGUAL", 
                      "MAYOR_IGUAL", "MENOR", "MAYOR", "ASIG", "SUMA", "RESTA", 
                      "MULT", "DIV", "PAR_IZQ", "PAR_DER", "LLAVE_IZQ", 
                      "LLAVE_DER", "PUNTO_COMA", "COMA", "DOS_PUNTOS", "LIT_PORCENTAJE", 
                      "NUM_DECIMAL", "NUM_ENTERO", "CADENA", "ID", "COMENTARIO_LINEA", 
                      "COMENTARIO_BLOQUE", "ESPACIO" ]

    RULE_programa = 0
    RULE_sentencia = 1
    RULE_bloque = 2
    RULE_declaracion = 3
    RULE_tipo = 4
    RULE_asignacion = 5
    RULE_expresion = 6
    RULE_literal = 7
    RULE_numero = 8
    RULE_seleccion = 9
    RULE_iteracion = 10
    RULE_regla = 11
    RULE_parametros = 12
    RULE_parametro = 13
    RULE_retorno = 14
    RULE_llamada = 15
    RULE_argumentos = 16
    RULE_llamadaSentencia = 17
    RULE_entradaSalida = 18

    ruleNames =  [ "programa", "sentencia", "bloque", "declaracion", "tipo", 
                   "asignacion", "expresion", "literal", "numero", "seleccion", 
                   "iteracion", "regla", "parametros", "parametro", "retorno", 
                   "llamada", "argumentos", "llamadaSentencia", "entradaSalida" ]

    EOF = Token.EOF
    VAR=1
    CONST=2
    ENTERO=3
    DECIMAL=4
    PORCENTAJE=5
    BOOLEANO=6
    TEXTO=7
    MONTO=8
    MONEDA=9
    SI=10
    SINO=11
    MIENTRAS=12
    PARA=13
    DESDE=14
    HASTA=15
    PASO=16
    REGLA=17
    RETORNAR=18
    MOSTRAR=19
    LEER=20
    CONVERTIR=21
    Y=22
    O=23
    NO=24
    VERDADERO=25
    FALSO=26
    MOD=27
    MAS_ASIG=28
    MENOS_ASIG=29
    IGUAL=30
    DIFERENTE=31
    MENOR_IGUAL=32
    MAYOR_IGUAL=33
    MENOR=34
    MAYOR=35
    ASIG=36
    SUMA=37
    RESTA=38
    MULT=39
    DIV=40
    PAR_IZQ=41
    PAR_DER=42
    LLAVE_IZQ=43
    LLAVE_DER=44
    PUNTO_COMA=45
    COMA=46
    DOS_PUNTOS=47
    LIT_PORCENTAJE=48
    NUM_DECIMAL=49
    NUM_ENTERO=50
    CADENA=51
    ID=52
    COMENTARIO_LINEA=53
    COMENTARIO_BLOQUE=54
    ESPACIO=55

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(KipuParser.EOF, 0)

        def sentencia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(KipuParser.SentenciaContext)
            else:
                return self.getTypedRuleContext(KipuParser.SentenciaContext,i)


        def getRuleIndex(self):
            return KipuParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = KipuParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4512395722372102) != 0):
                self.state = 38
                self.sentencia()
                self.state = 43
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 44
            self.match(KipuParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SentenciaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracion(self):
            return self.getTypedRuleContext(KipuParser.DeclaracionContext,0)


        def asignacion(self):
            return self.getTypedRuleContext(KipuParser.AsignacionContext,0)


        def seleccion(self):
            return self.getTypedRuleContext(KipuParser.SeleccionContext,0)


        def iteracion(self):
            return self.getTypedRuleContext(KipuParser.IteracionContext,0)


        def regla(self):
            return self.getTypedRuleContext(KipuParser.ReglaContext,0)


        def retorno(self):
            return self.getTypedRuleContext(KipuParser.RetornoContext,0)


        def entradaSalida(self):
            return self.getTypedRuleContext(KipuParser.EntradaSalidaContext,0)


        def llamadaSentencia(self):
            return self.getTypedRuleContext(KipuParser.LlamadaSentenciaContext,0)


        def bloque(self):
            return self.getTypedRuleContext(KipuParser.BloqueContext,0)


        def getRuleIndex(self):
            return KipuParser.RULE_sentencia

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSentencia" ):
                listener.enterSentencia(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSentencia" ):
                listener.exitSentencia(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSentencia" ):
                return visitor.visitSentencia(self)
            else:
                return visitor.visitChildren(self)




    def sentencia(self):

        localctx = KipuParser.SentenciaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_sentencia)
        try:
            self.state = 55
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 46
                self.declaracion()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 47
                self.asignacion()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 48
                self.seleccion()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 49
                self.iteracion()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 50
                self.regla()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 51
                self.retorno()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 52
                self.entradaSalida()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 53
                self.llamadaSentencia()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 54
                self.bloque()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BloqueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LLAVE_IZQ(self):
            return self.getToken(KipuParser.LLAVE_IZQ, 0)

        def LLAVE_DER(self):
            return self.getToken(KipuParser.LLAVE_DER, 0)

        def sentencia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(KipuParser.SentenciaContext)
            else:
                return self.getTypedRuleContext(KipuParser.SentenciaContext,i)


        def getRuleIndex(self):
            return KipuParser.RULE_bloque

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBloque" ):
                listener.enterBloque(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBloque" ):
                listener.exitBloque(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBloque" ):
                return visitor.visitBloque(self)
            else:
                return visitor.visitChildren(self)




    def bloque(self):

        localctx = KipuParser.BloqueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_bloque)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.match(KipuParser.LLAVE_IZQ)
            self.state = 61
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4512395722372102) != 0):
                self.state = 58
                self.sentencia()
                self.state = 63
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 64
            self.match(KipuParser.LLAVE_DER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return KipuParser.RULE_declaracion

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class DeclaracionVariableContext(DeclaracionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a KipuParser.DeclaracionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VAR(self):
            return self.getToken(KipuParser.VAR, 0)
        def ID(self):
            return self.getToken(KipuParser.ID, 0)
        def DOS_PUNTOS(self):
            return self.getToken(KipuParser.DOS_PUNTOS, 0)
        def tipo(self):
            return self.getTypedRuleContext(KipuParser.TipoContext,0)

        def PUNTO_COMA(self):
            return self.getToken(KipuParser.PUNTO_COMA, 0)
        def ASIG(self):
            return self.getToken(KipuParser.ASIG, 0)
        def expresion(self):
            return self.getTypedRuleContext(KipuParser.ExpresionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracionVariable" ):
                listener.enterDeclaracionVariable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracionVariable" ):
                listener.exitDeclaracionVariable(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracionVariable" ):
                return visitor.visitDeclaracionVariable(self)
            else:
                return visitor.visitChildren(self)


    class DeclaracionConstanteContext(DeclaracionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a KipuParser.DeclaracionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def CONST(self):
            return self.getToken(KipuParser.CONST, 0)
        def ID(self):
            return self.getToken(KipuParser.ID, 0)
        def DOS_PUNTOS(self):
            return self.getToken(KipuParser.DOS_PUNTOS, 0)
        def tipo(self):
            return self.getTypedRuleContext(KipuParser.TipoContext,0)

        def ASIG(self):
            return self.getToken(KipuParser.ASIG, 0)
        def expresion(self):
            return self.getTypedRuleContext(KipuParser.ExpresionContext,0)

        def PUNTO_COMA(self):
            return self.getToken(KipuParser.PUNTO_COMA, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracionConstante" ):
                listener.enterDeclaracionConstante(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracionConstante" ):
                listener.exitDeclaracionConstante(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracionConstante" ):
                return visitor.visitDeclaracionConstante(self)
            else:
                return visitor.visitChildren(self)



    def declaracion(self):

        localctx = KipuParser.DeclaracionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declaracion)
        self._la = 0 # Token type
        try:
            self.state = 84
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                localctx = KipuParser.DeclaracionVariableContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 66
                self.match(KipuParser.VAR)
                self.state = 67
                self.match(KipuParser.ID)
                self.state = 68
                self.match(KipuParser.DOS_PUNTOS)
                self.state = 69
                self.tipo()
                self.state = 72
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==36:
                    self.state = 70
                    self.match(KipuParser.ASIG)
                    self.state = 71
                    self.expresion(0)


                self.state = 74
                self.match(KipuParser.PUNTO_COMA)
                pass
            elif token in [2]:
                localctx = KipuParser.DeclaracionConstanteContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 76
                self.match(KipuParser.CONST)
                self.state = 77
                self.match(KipuParser.ID)
                self.state = 78
                self.match(KipuParser.DOS_PUNTOS)
                self.state = 79
                self.tipo()
                self.state = 80
                self.match(KipuParser.ASIG)
                self.state = 81
                self.expresion(0)
                self.state = 82
                self.match(KipuParser.PUNTO_COMA)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return KipuParser.RULE_tipo

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class TipoMontoContext(TipoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a KipuParser.TipoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def MONTO(self):
            return self.getToken(KipuParser.MONTO, 0)
        def MENOR(self):
            return self.getToken(KipuParser.MENOR, 0)
        def MONEDA(self):
            return self.getToken(KipuParser.MONEDA, 0)
        def MAYOR(self):
            return self.getToken(KipuParser.MAYOR, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipoMonto" ):
                listener.enterTipoMonto(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipoMonto" ):
                listener.exitTipoMonto(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTipoMonto" ):
                return visitor.visitTipoMonto(self)
            else:
                return visitor.visitChildren(self)


    class TipoDecimalContext(TipoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a KipuParser.TipoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def DECIMAL(self):
            return self.getToken(KipuParser.DECIMAL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipoDecimal" ):
                listener.enterTipoDecimal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipoDecimal" ):
                listener.exitTipoDecimal(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTipoDecimal" ):
                return visitor.visitTipoDecimal(self)
            else:
                return visitor.visitChildren(self)


    class TipoEnteroContext(TipoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a KipuParser.TipoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ENTERO(self):
            return self.getToken(KipuParser.ENTERO, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipoEntero" ):
                listener.enterTipoEntero(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipoEntero" ):
                listener.exitTipoEntero(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTipoEntero" ):
                return visitor.visitTipoEntero(self)
            else:
                return visitor.visitChildren(self)


    class TipoBooleanoContext(TipoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a KipuParser.TipoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def BOOLEANO(self):
            return self.getToken(KipuParser.BOOLEANO, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipoBooleano" ):
                listener.enterTipoBooleano(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipoBooleano" ):
                listener.exitTipoBooleano(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTipoBooleano" ):
                return visitor.visitTipoBooleano(self)
            else:
                return visitor.visitChildren(self)


    class TipoPorcentajeContext(TipoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a KipuParser.TipoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def PORCENTAJE(self):
            return self.getToken(KipuParser.PORCENTAJE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipoPorcentaje" ):
                listener.enterTipoPorcentaje(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipoPorcentaje" ):
                listener.exitTipoPorcentaje(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTipoPorcentaje" ):
                return visitor.visitTipoPorcentaje(self)
            else:
                return visitor.visitChildren(self)


    class TipoTextoContext(TipoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a KipuParser.TipoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def TEXTO(self):
            return self.getToken(KipuParser.TEXTO, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipoTexto" ):
                listener.enterTipoTexto(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipoTexto" ):
                listener.exitTipoTexto(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTipoTexto" ):
                return visitor.visitTipoTexto(self)
            else:
                return visitor.visitChildren(self)



    def tipo(self):

        localctx = KipuParser.TipoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_tipo)
        try:
            self.state = 95
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                localctx = KipuParser.TipoEnteroContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 86
                self.match(KipuParser.ENTERO)
                pass
            elif token in [4]:
                localctx = KipuParser.TipoDecimalContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 87
                self.match(KipuParser.DECIMAL)
                pass
            elif token in [5]:
                localctx = KipuParser.TipoPorcentajeContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 88
                self.match(KipuParser.PORCENTAJE)
                pass
            elif token in [6]:
                localctx = KipuParser.TipoBooleanoContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 89
                self.match(KipuParser.BOOLEANO)
                pass
            elif token in [7]:
                localctx = KipuParser.TipoTextoContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 90
                self.match(KipuParser.TEXTO)
                pass
            elif token in [8]:
                localctx = KipuParser.TipoMontoContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 91
                self.match(KipuParser.MONTO)
                self.state = 92
                self.match(KipuParser.MENOR)
                self.state = 93
                self.match(KipuParser.MONEDA)
                self.state = 94
                self.match(KipuParser.MAYOR)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AsignacionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.op = None # Token

        def ID(self):
            return self.getToken(KipuParser.ID, 0)

        def expresion(self):
            return self.getTypedRuleContext(KipuParser.ExpresionContext,0)


        def PUNTO_COMA(self):
            return self.getToken(KipuParser.PUNTO_COMA, 0)

        def ASIG(self):
            return self.getToken(KipuParser.ASIG, 0)

        def MAS_ASIG(self):
            return self.getToken(KipuParser.MAS_ASIG, 0)

        def MENOS_ASIG(self):
            return self.getToken(KipuParser.MENOS_ASIG, 0)

        def getRuleIndex(self):
            return KipuParser.RULE_asignacion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAsignacion" ):
                listener.enterAsignacion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAsignacion" ):
                listener.exitAsignacion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAsignacion" ):
                return visitor.visitAsignacion(self)
            else:
                return visitor.visitChildren(self)




    def asignacion(self):

        localctx = KipuParser.AsignacionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_asignacion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(KipuParser.ID)
            self.state = 98
            localctx.op = self._input.LT(1)
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 69524783104) != 0)):
                localctx.op = self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 99
            self.expresion(0)
            self.state = 100
            self.match(KipuParser.PUNTO_COMA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpresionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return KipuParser.RULE_expresion

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class ExprYContext(ExpresionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a KipuParser.ExpresionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expresion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(KipuParser.ExpresionContext)
            else:
                return self.getTypedRuleContext(KipuParser.ExpresionContext,i)

        def Y(self):
            return self.getToken(KipuParser.Y, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprY" ):
                listener.enterExprY(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprY" ):
                listener.exitExprY(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprY" ):
                return visitor.visitExprY(self)
            else:
                return visitor.visitChildren(self)


    class ExprAditivaContext(ExpresionContext):
